# gencode

./: .gitignore  History.md  README-gencpp--blank.md  README-gencpp--sourcelib-testing.md  README-gencpp.md  README.md  pyproject.toml
src/gencode_lib/: identifier.py
src/gencpp/: argparsers.py  blank.py  cli.py  generators.py  templates.py
src/gencpp/generators/: __init__.py  generators.py
src/gencpp/producers/: __init__.py  blank.py  producer.py  sourcelib_testing.py
tests/behaviour/: test__gencpp_blank.py  test__gencpp_blank__copyright.py  test__gencpp_sourcelib_testing.py
tests/data/: config.json
tests/data.expected/: lib_foo.cpp  lib_foo.hpp  root_foo.cpp  root_foo.hpp  root_foo_config.cpp  root_foo_config.hpp  root_foo_copyright.cpp  root_foo_copyright.hpp  root_foo_licence.cpp  root_foo_licence.hpp  root_whatever.cpp  root_whatever.hpp
tests/data.expected/blank/with-option/: root_foo_config.cpp  root_foo_config.hpp
tests/data.expected/blank/with-params/: root_foo.hpp  root_whatever.hpp
tests/data.expected/sourcelib-testing/with-config/: CMakeLists.txt
tests/data.expected/sourcelib-testing/with-config/src-tests/: CMakeLists.txt  TestRunner.cpp
tests/unit/gencode_lib/: test_Identifier.py
